# mapboard

./: README.md  mapboard.db  package-lock.json  package.json
backend/: __init__.py  auth.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/routers/: file.py  map.py  share.py  user.py
client/: package-lock.json  package.json
client/src/components/: Editor.tsx  Landing.tsx
client/src/data/: api-node-type.ts  api-tool.ts  api-workspace.ts  api.ts  middleware-edit.ts  reducer.ts  state-types.ts
experimental/: package-lock.json  package.json  tsconfig.json
experimental/src/: app.ts  eapp.ts  reapp.ts
server/: package-lock.json  package.json  tsconfig.json
server/prisma/: schema.prisma
server/src/: app.module.ts  check-jwt.guard.ts  mapboard.ts  server.ts  workspace-id.decorator.ts
server/src/distribution/: distribution.controller.ts  distribution.service.ts
src/: main.tsx
src/api/: Api.ts
src/apiMutations/: ApiMutations.ts
src/apiQueries/: ApiQueries.ts
src/apiState/: ApiState.ts  ApiStateTypes.ts
src/componentsApp/: App.tsx
src/componentsEditor/: Editor.tsx  EditorAppBarMid.tsx  EditorAppBarRight.tsx  Window.tsx
src/componentsMap/: MapSvgRIcons.tsx
src/componentsMapActions/: MapActions.tsx  NodeActions.tsx  NodeActionsEditFormatter.tsx
src/componentsUserActions/: UserSettings.tsx
src/consts/: Enums.ts
src/editorMutations/: EditorMutations.ts
src/editorState/: EditorState.ts  EditorStateTypes.ts
src/mapMutations/: MapMove.ts  MapMutations.ts
src/urls/: Urls.ts
(+63 files in other folders)
